# gerber-parser

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml
assets/reference_files/: polarities_and_apertures.gbr  two_square_boxes.gbr
assets/reference_files/edited/: drill_file.gbr  polarities_and_apertures.gbr
examples/: example1.rs
src/: document.rs  error.rs  gerber_doc.rs  lib.rs  macros.rs  parser.rs  util.rs
tests/: component_tests.rs  full_file_tests.rs  reference_file_tests.rs
tests/util/: mod.rs
tests/utils/: mod.rs
