[package]
name = "gerber_parser"
version = "0.2.0"
edition = "2018"
authors = [
    "Nemo Andrea <nemoandrea@outlook.com>",
    "Dominic Clifton <me@dominicclifton.name>"
]
description = "A simple gerber parser for the gerber-types crate"
readme = "README.md" 
documentation = "https://docs.rs/gerber-parser"
license = "AGPL-3.0"
homepage = "https://github.com/MakerPnP/gerber-parser"
repository = "https://github.com/MakerPnP/gerber-parser"


[dependencies]
# currently un-released, using latest gerber_types with updates to support macro expressions
#gerber_types = "0.4.0"
gerber_types = { git = "https://github.com/MakerPnP/gerber-types.git", rev = "aeac3cec5a2401fbaf2e6651a74888de4a7e2c0b"}
#gerber_types = { path = "../gerber-types" }

# errors
thiserror = "2.0.12"
anyhow = "1.0.98"

# regular expressions
regex = "1.11.1"
lazy-regex = "3.4.1"

# logging
log = "0.4.27"

[dev-dependencies]
stringreader = "0.1.1"
env_logger = "0.11.8"
