[package]
name = "gerber_parser"
version = "0.2.0"
documentation = "https://docs.rs/gerber-parser"
repository = "https://github.com/MakerPnP/gerber-parser"
homepage = "https://github.com/MakerPnP/gerber-parser"
license = "MIT OR Apache-2.0"
authors = [
    "Nemo Andrea <nemoandrea@outlook.com>",
    "Dominic Clifton <me@dominicclifton.name>"
]
description = "A gerber parser for the gerber-types crate"
readme = "README.md"
keywords = ["gerber", "parser", "pcb", "rs274x", "eda"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]
edition = "2018"

[features]
# requiring env_logger 11.8 causes the MSRV to rise to 1.80, adding a feature so we can build without
# env_logger is only a dev-dependency for tests, but cargo includes dev dependencies when building as well as testing.
# dev-dependencies are not currently allowed to be optional.
# see https://github.com/rust-lang/cargo/issues/4988
env_logger = ["dep:env_logger"]

[dependencies]
# currently un-released, using latest gerber_types with updates to support macro expressions
#gerber_types = "0.4.0"
gerber_types = { git = "https://github.com/MakerPnP/gerber-types.git", rev = "357215682b77093c3693efa4fe9d74076c1685fa"}
#gerber_types = { path = "../gerber-types" }

# errors
thiserror = "2.0.12"
anyhow = "1.0.98"

# enums
strum = "0.27.1"

# regular expressions
regex = "1.11.1"
lazy-regex = "3.4.1"

# logging
log = "0.4.27"
env_logger = { version = "0.11.8", optional = true }


[dev-dependencies]

